force-app/main/default/objects/Vacancy_District360__c/Vacancy_District360__c.object-meta.xml
<CustomObject>
    <description>Vacancy is used to track information regarding vacant spaces in a Property.</description>
    <label>Vacancy</label>
    <nameField>
        <label>Vacancy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vacancies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>