force-app/main/default/objects/Vacancy_District360__c/fields/Description_District360__c.field-meta.xml
<CustomField>
    <fullName>Description_District360__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>