force-app/main/default/objects/Vacancy_District360__c/fields/Expected_Sale_Lease_Amount_District360__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sale_Lease_Amount_District360__c</fullName>
    <label>Expected Sale/Lease Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>