force-app/main/default/objects/Vacancy_District360__c/fields/Floor_District360__c.field-meta.xml
<CustomField>
    <fullName>Floor_District360__c</fullName>
    <label>Floor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>