force-app/main/default/objects/Vacancy_District360__c/fields/Lease_Sale_Date_District360__c.field-meta.xml
<CustomField>
    <fullName>Lease_Sale_Date_District360__c</fullName>
    <label>Lease/Sale Date</label>
    <type>Date</type>
</CustomField>