force-app/main/default/objects/Vacancy_District360__c/fields/Lease_Type_District360__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type_District360__c</fullName>
    <label>Lease Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Pop-up</fullName>
            </value>
            <value>
                <fullName>Sublet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>