force-app/main/default/objects/Vacancy_District360__c/fields/Property_Address_District360__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_District360__c</fullName>
    <formula>Property_Name_District360__r.Property_Street_District360__c  &amp;  BR() 
&amp;Property_Name_District360__r.Property_City_District360__c  &amp;  BR() 
&amp;Property_Name_District360__r.Property_State_Province_District360__c  &amp;  BR() 
&amp;Property_Name_District360__r.Property_Zip_Postal_Code_District360__c  &amp;  BR()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>