force-app/main/default/objects/Vacancy_District360__c/fields/Property_ID_District360__c.field-meta.xml
<CustomField>
    <fullName>Property_ID_District360__c</fullName>
    <formula>Property_Name_District360__r.Property_ID_District360__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property ID</label>
    <type>Text</type>
</CustomField>