force-app/main/default/objects/Vacancy_District360__c/fields/Property_Name_District360__c.field-meta.xml
<CustomField>
    <fullName>Property_Name_District360__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Name</label>
    <referenceTo>Property_District360__c</referenceTo>
    <relationshipLabel>Vacancies</relationshipLabel>
    <relationshipName>Vacancies</relationshipName>
    <type>Lookup</type>
</CustomField>