force-app/main/default/objects/Vacancy_District360__c/fields/Property_Type_District360__c.field-meta.xml
<CustomField>
    <fullName>Property_Type_District360__c</fullName>
    <formula>TEXT(Property_Name_District360__r.Property_Type_District360__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Type</label>
    <type>Text</type>
</CustomField>