force-app/main/default/objects/Vacancy_District360__c/fields/Rent_Per_Square_Foot_District360__c.field-meta.xml
<CustomField>
    <fullName>Rent_Per_Square_Foot_District360__c</fullName>
    <label>Rent Per Square Foot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>