force-app/main/default/objects/Vacancy_District360__c/fields/Rent_Type_District360__c.field-meta.xml
<CustomField>
    <fullName>Rent_Type_District360__c</fullName>
    <label>Rent Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Service</fullName>
            </value>
            <value>
                <fullName>Triple Net</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>