force-app/main/default/objects/Vacancy_District360__c/fields/Space_Available_Date_District360__c.field-meta.xml
<CustomField>
    <fullName>Space_Available_Date_District360__c</fullName>
    <label>Space Available Date</label>
    <type>Date</type>
</CustomField>