force-app/main/default/objects/Vacancy_District360__c/fields/Space_Available_Sq_Ft_District360__c.field-meta.xml
<CustomField>
    <fullName>Space_Available_Sq_Ft_District360__c</fullName>
    <label>Space Available (Sq.Ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>