force-app/main/default/objects/Vacancy_District360__c/fields/Space_Status_District360__c.field-meta.xml
<CustomField>
    <fullName>Space_Status_District360__c</fullName>
    <label>Space Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Build Out</fullName>
            </value>
            <value>
                <fullName>Ready for Occupancy</fullName>
            </value>
            <value>
                <fullName>Tenant Improvements Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>