force-app/main/default/objects/Vacancy_District360__c/fields/Space_Type_District360__c.field-meta.xml
<CustomField>
    <fullName>Space_Type_District360__c</fullName>
    <label>Space Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event / Entertainment</fullName>
            </value>
            <value>
                <fullName>Flex</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Retail/Office</fullName>
            </value>
            <value>
                <fullName>Retail/Residential</fullName>
            </value>
            <value>
                <fullName>Retail/Restaurant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>