force-app/main/default/objects/Vacancy_District360__c/fields/Stage_District360__c.field-meta.xml
<CustomField>
    <fullName>Stage_District360__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open/Vacant</fullName>
            </value>
            <value>
                <fullName>Closed/Occupied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>