force-app/main/default/objects/Vacancy_District360__c/fields/Total_Square_Footage_District360__c.field-meta.xml
<CustomField>
    <fullName>Total_Square_Footage_District360__c</fullName>
    <formula>Property_Name_District360__r.Total_Square_Footage_District360__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Square Footage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>