force-app/main/default/objects/Vacancy_District360__c/fields/Type_District360__c.field-meta.xml
<CustomField>
    <fullName>Type_District360__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>For Rent</fullName>
            </value>
            <value>
                <fullName>For Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>