force-app/main/default/objects/Vacancy_District360__c/fields/Unit_District360__c.field-meta.xml
<CustomField>
    <fullName>Unit_District360__c</fullName>
    <label>Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>