force-app/main/default/objects/Vacancy_District360__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expected_Sale_Lease_Amount_District360__c</columns>
    <columns>Space_Available_Sq_Ft_District360__c</columns>
    <columns>Space_Status_District360__c</columns>
    <columns>Stage_District360__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Vacancies</label>
</ListView>